# CHANGELOG
# ---
# * Add support for descriptions in Authorize.net credits [shiva.kaul]
#
# * Great cleanup and improvement of CreditCard code, tests, and docs [James Herdman]
#
# * Fix remote PayPal tests [cody]
#
# * Update Linkpoint tests to remove useless pem file [cody]
#
# * Use symbols for CreditCard error messages, since errors have indifferent access [cody]
#
# * Improve CreditCard error messages [George Ogata]
#
# * Change deny to assert_false, and deny_success to assert_failure.  Remove Gateway.gateway, as it is available from Base [cody]
#
# * Improve documentation, and test coverage [James Herdman]
#
# * Refactor MonerisGateway, improve test coverage and documentation [James Herdman]
#
# * Add support for crediting to Moneris [James Herdman]
#
# * Send state N/A in Payflow when the state is blank.  Fixes UK PayPal Express payments when not providing a state [cody]
#
# * Load remote test credentials from a fixtures file.  ActiveMerchant will look for a custom file ~/.active_merchant/fixtures.yml.  If the file exists it will be loaded instead of the default fixtures provided by ActiveMerchant.  This makes development easier, and removes the risk of committing non-public test account credentials to subversion. [cody]
#
# * Add support for password protected pem files [cody]
#
# * Add support for Concord Efsnet payment gateway [snacktime]
#
# * Fix dependency loading for gateways that are subclasses [cody]
#
# * Add Braintree payment gateway [Michael J. Mangino]
#
# * Add support for PayPal API signatures [Benjamin Curtis, cody]
#
# * Add payment gateway Viaklix [Sal Scotto, cody]
#
# * Add Australian payment gateway NetRegistry [George Ogata]
#
# * Take order email from the options hash instead of the address for CyberSource [cody]
#
# * Use an array for LineItems when calculating tax in CyberSource gateway [cody]
#
# * Add CyberSource gateway [Matt Margolis]
#
# * Sanitize Protx order id [cody]
#
# * Fix support for electron in Protx [cody]
#